Able to run examples

--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
   <head>
     <title>Experiment</title>
   </head>
-  <body>Text</body>
+  <body>
+    <h1>Experiments</h1>
+    <ul>
+      <li><a href="jspsych/examples/jspsych-html-button-response.html">jspsych-html-button-response.html</a></li>
+      <li><a href="jspsych/examples/jspsych-image-keyboard-response.html">jspsych-image-keyboard-response.html</a></li>
+    </ul>
+  </body>
 </html>
