Added testing link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Extras
                 </h3>
                 <p>
-                    .
+                    <a href="https://jirilukavsky.github.io/labtest_123/">link</a>
                 </p>
             </div>
         </div>
