Experiment Muller-Lyer added

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
                 </h3>
                 <p>
                   <ul>
-                    <li><a href="jspsych/examples/jspsych-html-button-response.html">jspsych-html-button-response.html</a></li>
-                    <li><a href="jspsych/examples/jspsych-image-keyboard-response.html">jspsych-image-keyboard-response.html</a></li>
-                    <li>Mozková asymetrie (Brain asymmetry)</li>
-                    <li>Müller-Lyerova iluze (Müller-Lyer illusion)</li>
+                    <li>Müller-Lyerova iluze (Müller-Lyer illusion) - <a href="experiments/muller-lyer.html">demo</a></li>
                     <li>Detekce signálu (Signal detection)</li>
                     <li>Zrakové vyhledávání (Visual search)</li>
                     <li>ESP-Zenerovy karty</li>
@@ -61,6 +58,15 @@
                     <a href="https://jirilukavsky.github.io/labtest_123/">link</a>
                 </p>
             </div>
+            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+              <h3 class="content-subhead">
+                  <i class="fa fa-mobile"></i>
+                  Note
+              </h3>
+              <p>
+                  No data are stored on the server. 
+              </p>
+          </div>
         </div>
     </div>
   </div>
