--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>
                   <ul>
                     <li>Müller-Lyerova iluze (Müller-Lyer illusion) - <a href="experiments/muller-lyer.html">demo</a></li>
-                    <li>Detekce signálu (Signal detection)</li>
+                    <li>Detekce signálu (Signal detection) - <a href="experiments/sdt-seach.html">demo</a></li>
                     <li>Zrakové vyhledávání (Visual search)</li>
                     <li>ESP-Zenerovy karty</li>
                     <li>Mrknutí pozornosti (Attentional blink)</li>
